--- a/CasaEscuela.AppWebMVC/Views/Anamnesis/Index.cshtml
+++ b/CasaEscuela.AppWebMVC/Views/Anamnesis/Index.cshtml
@@ -42,16 +42,26 @@
                                     </td>
                                     <td class="text-end">
                                         <div class="d-flex justify-content-end gap-2">
-                                            <a href="@Url.Action("Expediente", "Anamnesis", new { idEstudiante = item.IdEstudiante })" 
-                                               class="btn btn-sm btn-outline-info rounded shadow-sm" title="Ver Expediente">
-                                                <i class="ti ti-file-description"></i> Expediente
+                                            <a href="@Url.Action("Expediente", "Anamnesis", new { idEstudiante = item.IdEstudiante })"
+                                               class="btn btn-sm btn-outline-info rounded shadow-sm"
+                                               title="Ver Expediente">
+                                                <i class="fas fa-folder-open me-1"></i> Expediente
                                             </a>
-                                            <a href="@Url.Action("Edit", "Anamnesis", new { idEstudiante = item.IdEstudiante })"
-                                               class="btn btn-sm btn-outline-primary rounded shadow-sm">
-                                                <i class="ti ti-edit"></i>
+
+                                            <a href="@Url.Action("Create", "Anamnesis", new { idEstudiante = item.IdEstudiante })"
+                                               class="btn btn-sm btn-outline-primary rounded shadow-sm"
+                                               title="Editar Anamnesis">
+                                                <i class="fas fa-edit"></i>
+                                            </a>
+
+                                            <a href="@Url.Action("Cronologia", "Anamnesis", new { idEstudiante = item.IdEstudiante })"
+                                               class="btn btn-sm btn-outline-warning rounded shadow-sm"
+                                               title="Ver Línea de Tiempo">
+                                                <i class="fas fa-stream"></i>
                                             </a>
 
                                         </div>
+
                                     </td>
                                 </tr>
                             }
